--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 .App {
+  background-color:#d5ddce ;
   text-align: center;
-  color:white
+  color:white;
+  width: 90em;
+  position:relative;
+  border-radius: 20px;
+  margin:auto;
 }
 
 .App-link {
@@ -8,8 +13,25 @@
 }
 
 .Navbar {
-  padding: 0.2em;
-  margin: 0.5em;
+  background-color:#d5ddce;
+  text-align: center;
+  color:rgb(94, 76, 76);
+  width: 90em;
+  position:relative;
+  border-radius: 20px;
+  margin:auto;
+  margin-bottom:1rem;
+  padding-bottom:1rem;
+}
+
+.header {
+  background-color:#d5ddce;
+  text-align: center;
+  color:rgb(94, 76, 76);
+  width: 90em;
+  position:relative;
+  border-radius: 20px;
+  margin:auto;
 }
 
 /* .Links {
