Changed likes to liked instead

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   background-color:#d5ddce ;
   text-align: center;
-  color:white;
+  color:rgb(94, 76, 76);
   width: 90em;
   position:relative;
   border-radius: 20px;
