--- a/src/PenguinList.css
+++ b/src/PenguinList.css
@@ -65,3 +65,22 @@ button:hover {
 .penguinsNew {
   justify-items: left;
 }
+
+.addPenguin {
+  background-color: rgb(240, 169, 131);
+  color: white;
+  font-weight: bold;
+  font-size:large;  
+  padding: 5px 15px;
+  border-radius: 5px;
+  outline: 0;
+  text-transform: uppercase;
+  margin: 10px 0px;
+  cursor: pointer;
+  box-shadow: 0px 2px 2px lightgray;
+  transition: ease background-color 250ms;
+}
+
+.addPenguin:hover {
+  background-color: rgb(225, 147, 170);
+}
