Added routes to new page and moved PenguinList code up to App level

--- a/src/PenguinList.css
+++ b/src/PenguinList.css
@@ -31,7 +31,8 @@
   justify-items: center;
   position:relative;
   border-radius: 20px;
-  transition-property:background-color;
+  opacity: 1;
+  transition-property:all;
   transition-duration:0.5s;
   animation: append-animate .5s linear;
 }
