--- a/src/css/App.css
+++ b/src/css/App.css
@@ -31,6 +31,13 @@
   margin:1rem;
 }
 
+h1.pengHead {
+  /* font-weight: 900; */
+  /* font-size: 5em; */
+  padding-top:0.5em;
+  padding-bottom:0.5em;
+}
+
 .home {
   display: inline-grid;
 
