--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,19 +25,17 @@
 }
 
 h1.pengHead {
-  /* font-weight: 900; */
-  /* font-size: 5em; */
   padding-top:0.5em;
   padding-bottom:0.5em;
 }
 
 .credits {
   background-color:#d5ddce;
-  text-align: center;
   color:rgb(94, 76, 76);
   position:relative;
   border-radius: 20px;
   margin:1rem;
+  text-align: center;
 }
 
 .Navbar {
@@ -60,13 +58,14 @@ a.Links:hover {
   background-color: rgba(28, 127, 241, 0.351);
 }
 a.Links:active { 
-  text-decoration: underline; 
+  text-decoration: none; 
 }
 
 .Links {
   background-color: rgba(33, 237, 255, 0.351);
+  font-weight:500;
   display: inline-grid;
-  margin: 0.3rem;
+  margin: 0.5rem;
   justify-items: center;
   position:relative;
   border-radius: 20px;
@@ -74,3 +73,14 @@ a.Links:active {
   transition-duration:0.5s;
   animation: append-animate .5s linear;
 }
+
+.about {
+  margin-left:1rem;
+  margin-right:1rem;
+}
+
+.about img {
+  margin-top:1em;
+  width:10em;
+}
+
