--- a/src/css/App.css
+++ b/src/css/App.css
@@ -75,8 +75,9 @@ a.Links:active {
 }
 
 .about {
-  margin-left:1rem;
-  margin-right:1rem;
+  margin-left:1.5rem;
+  margin-right:1.5rem;
+  word-wrap: normal;
 }
 
 .about img {
